# ops-schema

./: 404.html  CNAME  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  index.html  mkdocs.yml  sitemap.xml
analysis/: index.html
cli/: index.html
docs/: index.md  mkdocs.yml
docs/cli/: index.md
download/: index.html
overrides/: main.html
schema/: index.html
search/: search_index.json
stylesheets/: custom.css
validator/: pyproject.toml
validator/scripts/: prepare_references.py
validator/src/ops_validator/: __init__.py  cli.py  cli2.py  cross_artifact.py  gencode.py  ontology.py  submission.py
validator/src/ops_validator/models/: cell_data.py  collection.py  experimental.py  feature_definitions.py  perturbation_library.py  zarr_images.py
validator/src/ops_validator/reference_files/: ensembl_110_human.parquet  gene_info.yml  genes_homo_sapiens.csv  genes_homo_sapiens.parquet
validator/src/ops_validator/validators/: aggregated_data.py  base.py  cell_data.py  collection.py  experimental.py  feature_definitions.py  perturbation_library.py  zarr_images.py
validator/src/ops_validator/zarr/: __init__.py  constants.py  discovery.py  registry.py  result.py  runner.py  validator.py  zarr_node.py
validator/src/ops_validator/zarr/spec/v0_1/: models.py
validator/src/ops_validator/zarr_validation/: __init__.py  registry.py  result.py  runner.py  validator.py
validator/src/ops_validator/zarr_validation/spec/v0_1/: models.py
validator/tests/: test_aggregated_data.py  test_collection.py  test_cross_artifact.py  test_feature_definitions.py  test_perturbation_library.py  test_submission_checker.py  test_zarr_models.py  test_zarr_validator.py
(+45 files in other folders)
