[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ops-schema-validator"
version = "0.1.0"
description = "Validator for the OPS Data Standard v0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-zarr>=0.7",
    "zarr>=3.0",
    "anndata>=0.10",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "pronto>=2.5",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ops_validator"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
