[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-schema-validator"
version = "0.1.0"
description = "Validator for the OPS Data Standard v0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-zarr>=0.7",
    "zarr>=3.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
all = [
    "anndata>=0.10",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "pronto>=2.5",
    "requests>=2.28",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.scripts]
ops-validate = "ops_validator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ops_validator", "ops_validator.validators", "ops_validator.models"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
